refactor: Changed default logic in GameManager() constructor. Made DEFAULT_PLAYER_LIST final. Removed unused variable 'rolesSelectedMap'