@@ -7,6 +7,7 @@ import fr.cotedazur.univ.polytech.citadellesgroupeq.players.ColorPlayer;
 import fr.cotedazur.univ.polytech.citadellesgroupeq.players.Player;
 import fr.cotedazur.univ.polytech.citadellesgroupeq.players.RealEstatePlayer;
 
+import java.lang.reflect.Constructor;
 import java.util.*;
 
 /**
@@ -28,8 +29,6 @@ public class GameManager {
 
     public static final int NUMBER_OF_DISTRICTS_TO_WIN =8;
 
-    private Map<Player, Role> rolesSelectedMap;
-
     /**
      * True quand la partie est finie, False quand elle est en cours
      */
@@ -39,12 +38,28 @@ public class GameManager {
      * Contient les joueurs dans leur ordre de passage (en fonction de leur rôle). Les {@link TreeSet} sont automatiquement triés dans l'ordre
      */
     private final SortedSet<Player> playerTreeSet;
-  
-    public static List<Player> DEFAULT_PLAYER_LIST= Arrays.asList(new ColorPlayer(0), new RealEstatePlayer(1),new AlwaysSpendPlayer(2),new RandomPlayer(3));
+
+
+    //nécessaire pour régler l'issue #53 sur github: voir la doc de public GameManager()
+    public static final List<Class<? extends Player>> DEFAULT_PLAYER_CLASS_LIST = Arrays.asList(ColorPlayer.class, RealEstatePlayer.class, AlwaysSpendPlayer.class, RandomPlayer.class);
 
     public GameManager() {
-        this(DEFAULT_PLAYER_LIST);
-        DEFAULT_PLAYER_LIST= Arrays.asList(new ColorPlayer(0), new RealEstatePlayer(1),new AlwaysSpendPlayer(2),new RandomPlayer(3));
+        this(List.of());//liste de joueurs vide
+
+
+        //nécessaire pour régler l'issue #53 sur github:
+        // il est plus simple d'instancier les joueurs depuis une liste de classes, avec leur constructeur, qu'essayer de les copier en profondeur
+
+        int ids=0;
+        for(Class<? extends Player> playerStrategy: DEFAULT_PLAYER_CLASS_LIST) {
+            try {
+                Constructor<? extends Player> constructor = playerStrategy.getDeclaredConstructor(int.class);
+                this.playersList.add(constructor.newInstance(ids++));
+            }
+            catch(Exception e) {
+                throw new RuntimeException("pas de constructeur prenant un int en paramètre trouvé pour la classe " + playerStrategy.getName() + "! Erreur de code");
+            }
+        }
     }
 
     public GameManager(List<Player> playersList) {
@@ -53,7 +68,6 @@ public class GameManager {
         this.masterOfTheGameIndex=0;
         playerTreeSet=new TreeSet<>();
         isFinished=false;
-        rolesSelectedMap=new HashMap<>();
     }
 
     public List<Player> getPlayersList() {
@@ -84,7 +98,6 @@ public class GameManager {
         List<Player> playersInRolePickingOrder=new ArrayList<>();
 
         playerTreeSet.clear();
-        rolesSelectedMap.clear();
         setRandomMasterOfGame();//pour débuter par un joueur aléatoire
         for(int i=0; i < playersList.size(); i++) {
             int selectedPlayerIndex=(i+masterOfTheGameIndex) % playersList.size();//permet de boucler toutes les valeurs dans l'ordre, à partir du masterOfGame
@@ -97,7 +110,6 @@ public class GameManager {
                 throw new IllegalArgumentException("Roles can't be EMPTY_ROLE.");
             }
 
-            rolesSelectedMap.put(selectedPlayer, availableRoles.get(selectedRoleIndex));
             playerTreeSet.add(selectedPlayer);//on ajoute le joueur actuel à la liste, qui est automatiquement triée de par son type TreeSet
             availableRoles.remove(selectedRoleIndex);//pour que les prochains joueurs ne puissent pas prendre le même rôle
         }
